[project]
name = "licen"
dynamic = ["version"]
description = "Generate the license for you via command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "lord63", email = "lord63.j@gmail.com" },
]
keywords = ["license", "generate", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "docopt==0.6.2",
    "jinja2>=3.0",
]

[project.urls]
Homepage = "http://github.com/lord63/licen"

[project.scripts]
licen = "licen.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["licen"]

[tool.hatch.version]
path = "licen/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
]
